# paimon-dex-protocol

./: .gitignore  .gitmodules  DEPLOYMENT.md  README.md  TESTNET_DEPLOYMENT_SUMMARY.md  TESTNET_DEPLOYMENT_SUMMARY.md.bak  TESTNET_QUICKSTART.md  TOKENOMICS_OPTIMIZED.md
.claude/: CLAUDE.md
paimon-backend/: .dockerignore  .env.example  .env.test  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml  railway.json  render.yaml  requirements.txt
paimon-backend/alembic/: env.py
paimon-backend/alembic/versions/: 3209aa090f79_add_points_system_tables.py  60539cfbacbd_initial_migration_user_kyc_taskprogress_.py  61ecaf017959_create_timescaledb_tables.py  88364eb7f7ec_add_task_system_enhancements_config_.py  8c4ecbce1f76_add_portfolio_cache_table.py  ba131919a137_add_points_redemptions_table.py  c7d84fe676d1_add_indexer_tables.py  e7d4d1011c63_add_performance_indexes.py
paimon-backend/app/: __init__.py  main.py
paimon-backend/app/api/: __init__.py  dependencies.py  tier_auth.py
paimon-backend/app/config/: contracts.py  points_rules.py
paimon-backend/app/core/: cache.py  config.py  database.py  dependencies.py  exceptions.py  logger.py  middleware.py  nonce.py  security.py  social_oauth.py  taskon_auth.py  tiered_cache.py  wallet.py  webhook_security.py
paimon-backend/app/indexer/: __init__.py  event_listener.py  main.py  scheduler.py
paimon-backend/app/models/: __init__.py  base.py  historical.py  indexer.py  kyc.py  points.py  portfolio_cache.py  redemption.py  referral.py  task.py  user.py
paimon-backend/app/routers/: analytics.py  auth.py  features.py  historical.py  kyc.py  leaderboard.py  points.py  portfolio.py  redemption.py  referral.py  social_auth.py  taskon.py  tasks.py  user.py
paimon-backend/app/schemas/: __init__.py  auth.py  example.py  kyc.py  points.py  referral.py  task.py  taskon.py  user.py
paimon-backend/app/services/: kyc_permission.py  points.py  referral.py  social_verification.py  task_progress.py  web3_service.py
paimon-backend/docs/: API_REFERENCE.md  Paimon_API.postman_collection.json  RWA_TASK_VERIFICATION_DESIGN.md
paimon-backend/migrations/: add_social_media_fields.sql
paimon-backend/tests/: __init__.py  conftest.py  test_kyc_permission.py  test_kyc_tier.py  test_kyc_webhook.py  test_models_historical.py  test_rwa_task_verification.py  test_task_progress_api.py  test_task_system_design.py  test_taskon_integration.py
(+876 files in other folders)
